WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314040
Ignore Xcode when logging WebKit1 usage
https://bugs.webkit.org/show_bug.cgi?id=314040
Summary
Ignore Xcode when logging WebKit1 usage
David Kilzer (:ddkilzer)
Reported
2026-05-04 18:11:00 PDT
Ignore Xcode when logging WebKit1 usage. Xcode's plugin infrastructure loads a WebKit1 `WebView` during menu validation, so there's no need to log this.
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2026-05-04 18:11:02 PDT
<
rdar://problem/152353440
>
David Kilzer (:ddkilzer)
Comment 2
2026-05-04 18:21:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64230
EWS
Comment 3
2026-05-05 16:59:57 PDT
Committed
312652@main
(5317c7fa4e32): <
https://commits.webkit.org/312652@main
> Reviewed commits have been landed. Closing PR #64230 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug