Ignore Xcode when logging WebKit1 usage <https://bugs.webkit.org/show_bug.cgi?id=314040> <rdar://152353440>

Reviewed by Tim Horton.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::shouldOSFaultLogForAppleApplicationUsingWebKit1):
- Disable WebKit1 logging for Xcode.

Canonical link: https://commits.webkit.org/312652@main